@@ -1,3 +1,7 @@
+2002-04-12  Sam Hartman  <hartmans@mit.edu>
+
+	* kerberos5.c forward.c: Build without k5-int.h
+
 2002-03-29  Tom Yu  <tlyu@mit.edu>
 
 	* kerberos.c, kerberos5.c (Data): Reindent to 8 columns. (yes,
